--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: dh-cargo
 Section: devel
 Priority: optional
 Maintainer: Rust Maintainers <pkg-rust-maintainers@lists.alioth.debian.org>
-Uploaders: Josh Triplett <josh@joshtriplett.org>
+Uploaders: Josh Triplett <josh@joshtriplett.org>, Ximin Luo <infinity0@debian.org>
 Build-Depends: debhelper (>= 10)
 Standards-Version: 3.9.8
 Vcs-Git: https://anonscm.debian.org/git/pkg-rust/dh-cargo.git
