--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,8 @@ Maintainer: Rust Maintainers <pkg-rust-maintainers@lists.alioth.debian.org>
 Uploaders: Josh Triplett <josh@joshtriplett.org>, Ximin Luo <infinity0@debian.org>
 Build-Depends: debhelper (>= 10)
 Standards-Version: 4.1.3
-Vcs-Git: https://anonscm.debian.org/git/pkg-rust/dh-cargo.git
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-rust/dh-cargo.git
+Vcs-Git: https://salsa.debian.org/rust-team/dh-cargo.git
+Vcs-Browser: https://salsa.debian.org/rust-team/dh-cargo
 
 Package: dh-cargo
 Architecture: all
